...
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:hint="@string/server_field_hint">

                <com.github.vase4kin.teamcityapp.login.view.EditTextNoAutofill
                    android:id="@+id/teamcity_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:text="@string/text_teamcity_url" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/guest_user_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:text="@string/text_guest_user_switch" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_field_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:hint="@string/hint_user_name">

                <com.github.vase4kin.teamcityapp.login.view.EditTextNoAutofill
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:hint="@string/hint_password">

                <com.github.vase4kin.teamcityapp.login.view.EditTextNoAutofill
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/disable_ssl_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
...
